added tab title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Purpose of Hmrc&period;BDApp&period;O365</title>
+    <title>Homernet Docs</title>
     <style>
     </style>
 
