Change index heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="vscode-body vscode-light">
-    <h1 id="the-purpose-of-hmrcbdappo365">The Purpose of Hmrc.BDApp.O365</h1>
+    <h1 id="the-purpose-of-hmrcbdappo365">Hmrc.BDApp.O365 Documentation</h1>
     <p><a
             href="https://dev.azure.com/DevDDA/Hmrc.BDApp.O365/_packaging?_a=package&amp;feed=02cea248-3d30-4e41-806e-e613324a9ae1&amp;package=42ef2122-5429-4062-921f-3335aadc6bdb&amp;preferRelease=true"><img
                 src="https://feeds.dev.azure.com/DevDDA/_apis/public/Packaging/Feeds/02cea248-3d30-4e41-806e-e613324a9ae1/Packages/42ef2122-5429-4062-921f-3335aadc6bdb/Badge"
