--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Settings for the &midast;graphsettings&period;json&midast; file</title>
   <style>
   </style>
