--- a/settings.html
+++ b/settings.html
@@ -67,7 +67,7 @@
   <p>The <b><em>bdappId</em></b> is used in the creation of the token cache file which is written to
     <b><em>%userprofile%\AppData\Roaming\BDApp\111066\111066.msalcache.bin3</em></b> in this example. Each BDApp will
     have its own cache folder by BDAppId.</p>
-  <p>The last key-value pair is the <em>scopes</em> having its key and its value being an array of delegates.</p>
+  <p>The last key-value pair are the <em>scopes</em> having its key and its value being an array of delegates.</p>
   <blockquote>
     <p>Please refer to the <a href="https://docs.microsoft.com/en-us/graph/permissions-reference"
         target="_blank">Microsoft Graph API Permissions</a> for full reference. Only the delegate permissions that have
