--- a/install.html
+++ b/install.html
@@ -49,7 +49,7 @@
                 href="https://pkgs.dev.azure.com/DevDDA/_packaging/DevDDA/nuget/v3/index.json">https://pkgs.dev.azure.com/DevDDA/_packaging/DevDDA/nuget/v3/index.json</a>
         </p>
     </blockquote>
-    <p><img src="\images\SetUpFeed.png" alt=""></p>
+    <p><img src="/images/SetUpFeed.png" alt=""></p>
     <p>Once done click on Update then OK. This feed is now available in the NuGet package viewer as shown below.</p>
     <p><img src="\images\sourcesetting.png" alt=""></p>
     <blockquote>
