--- a/install.html
+++ b/install.html
@@ -40,7 +40,7 @@
         Studio you will need to add the artifact repository to your list of NuGet sources.</p>
     <p>Open the NuGet Package Manager -&gt; Package Manager Settings from the Tools menu in Visual Studio and select
         Package Sources.</p>
-    <p><img src="\images\ToolsPackageManage.png" alt=""></p>
+    <p><img src="images\ToolsPackageManage.png" alt=""></p>
     <p>Click on the <img src="\images\addbutton.png" alt=""> and enter the following in the Name and Source text boxes
         respectively:</p>
     <blockquote>
@@ -51,7 +51,7 @@
     </blockquote>
     <p><img src="images\SetUpFeed.png" alt=""></p>
     <p>Once done click on Update then OK. This feed is now available in the NuGet package viewer as shown below.</p>
-    <p><img src="\images\sourcesetting.png" alt=""></p>
+    <p><img src="images\sourcesetting.png" alt=""></p>
     <blockquote>
         <p>In order for the NuGet package manager to be able to find DevDDA packages make sure you have selected DevDDA
             from the settings or All.</p>
@@ -60,7 +60,7 @@
         not make sure which NuGet repository you have set Package source to.</p>
     <p>Depending on your Visual Studio settings you may be presented with the following dialogue asking the desired
         format of the package manager.</p>
-    <p><img src="\images\selectpackageref.png" alt=""></p>
+    <p><img src="images\selectpackageref.png" alt=""></p>
     <p>Select the option shown, PackageReference in project file.</p>
     <blockquote>
         <p>This package will not install if your project has not been converted to PackageReference.</p>
