--- a/preperation.html
+++ b/preperation.html
@@ -41,7 +41,7 @@
     <p>If your existing project has a <em>packages.config</em> then in the solution explorer right click on the
         <em>packages.config</em> of the project you wish to install the package and select <em>Migrate packages.config
             to PackageReference...</em></p>
-    <p><img src="\images\PackageReference.png" alt="PackageReference"></p>
+    <p><img src="images\PackageReference.png" alt="PackageReference"></p>
     <p>This will display a dialogue showing existing packages and if there are any issues.</p>
     <blockquote>
         <p>It is recommended that you refer to <a
