--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/Microsoft/vscode/extensions/markdown-language-features/media/highlight.css">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="favicon.ico"/>
 </head>
 
 <body class="vscode-body vscode-light">
