--- a/scenarios.html
+++ b/scenarios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Development Scenarios</title>
+    <title>Homernet Docs : Scenarios</title>
     <style>
     </style>
 
@@ -30,7 +30,7 @@
         }
     </style>
 
-
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
